// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recruitment/create-candidate/breezy-hr CreateCandidate when specified company does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get company by ID 1b111c1111ef11. Check that the company with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"breezy-hr\\",
    \\"totalRequests\\": 100,
    \\"remainingRequests\\": 98,
    \\"remainingRequestsPercentage\\": 98,
    \\"resetTimestamp\\": 1671617993
  }
}
AST Path: definitions[0].statements[0].statements[0]
Original Map Location: Line 9, column 5",
}
`;

exports[`recruitment/create-candidate/breezy-hr CreateCandidate when specified job does exist performs correctly 1`] = `
Ok {
  "value": Object {
    "id": "bb3d69f3e5b401",
    "jobId": "f1cfc5572a5701",
    "rateLimit": Object {
      "bucket": "breezy-hr",
      "remainingRequests": 87,
      "remainingRequestsPercentage": 87,
      "resetTimestamp": 1671610826,
      "totalRequests": 100,
    },
  },
}
`;

exports[`recruitment/create-candidate/breezy-hr CreateCandidate when specified job does not exist returns error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get job by ID 12345ab789d1dd. Check that the job with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"breezy-hr\\",
    \\"totalRequests\\": 100,
    \\"remainingRequests\\": 78,
    \\"remainingRequestsPercentage\\": 78,
    \\"resetTimestamp\\": 1671610826
  }
}
AST Path: definitions[0].statements[1].statements[0]
Original Map Location: Line 17, column 5",
}
`;
